<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".presentation.first_screen.MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_width="@dimen/val_0dp"
        android:layout_height="@dimen/val_0dp"
        android:layout_marginTop="@dimen/val_7dp"
        android:gravity="center"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="11"
        android:shadowDy="11"
        android:shadowRadius="2"
        android:text="@string/app_title"
        android:textColor="@color/light_font"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/val_0dp"
        android:layout_height="@dimen/val_0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/val_15dp"
        app:cardElevation="@dimen/val_15dp"
        app:cardMaxElevation="@dimen/val_15dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/val_25dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_int_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/input_layout_width"
                android:layout_height="@dimen/input_layout_height"
                android:layout_gravity="center"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/design_default_color_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_int_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/first_int_hint"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_string_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/input_layout_width"
                android:layout_height="@dimen/input_layout_height"
                android:layout_gravity="center"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/design_default_color_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_string_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/first_string_hint"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/second_int_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/input_layout_width"
                android:layout_height="@dimen/input_layout_height"
                android:layout_gravity="center"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/design_default_color_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/second_int_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/second_int_hint"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/second_string_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/input_layout_width"
                android:layout_height="@dimen/input_layout_height"
                android:layout_gravity="center"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/design_default_color_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/second_string_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/second_string_hint"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/limit_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/input_layout_width"
                android:layout_height="@dimen/input_layout_height"
                android:layout_gravity="center"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/design_default_color_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/limit_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/limit_hint"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/validate_btn"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/val_10dp"
                android:background="@drawable/button_background"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/button_text"
                android:textColor="@color/white"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>